WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279028
Borders on inlines with border-radius fails to render
https://bugs.webkit.org/show_bug.cgi?id=279028
Summary
Borders on inlines with border-radius fails to render
Simon Fraser (smfr)
Reported
2024-09-02 10:55:58 PDT
Created
attachment 472404
[details]
Test The attached test case should show some gradient borders, but does not.
Attachments
Test
(2.88 KB, text/html)
2024-09-02 10:55 PDT
,
Simon Fraser (smfr)
no flags
Details
Safari results
(741.73 KB, image/png)
2024-09-02 12:01 PDT
,
Alexey Proskuryakov
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-02 10:56:13 PDT
<
rdar://problem/135150765
>
Simon Fraser (smfr)
Comment 2
2024-09-02 10:57:48 PDT
This is not just about `background-clip: border-area`. Happens without that.
Alexey Proskuryakov
Comment 3
2024-09-02 12:01:00 PDT
Created
attachment 472405
[details]
Safari results I see rounded borders and gradients in Safari. Although the overall result is different from Chrome and Firefox, so perhaps this is a test case for another problem attached?
Simon Fraser (smfr)
Comment 4
2024-09-03 11:29:00 PDT
I may have just broken this in my local build. Checking...
Simon Fraser (smfr)
Comment 5
2024-09-03 11:40:35 PDT
Confirmed that it's broken on `main.`
Simon Fraser (smfr)
Comment 6
2024-09-03 14:17:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33085
EWS
Comment 7
2024-09-04 17:16:35 PDT
Committed
283180@main
(267d0dc72518): <
https://commits.webkit.org/283180@main
> Reviewed commits have been landed. Closing PR #33085 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug