Borders on inlines with border-radius fails to render https://bugs.webkit.org/show_bug.cgi?id=279028 rdar://135150765

Reviewed by Alan Baradlay.

282658@main incorrectly reset the origin of the RoundedRect in `BackgroundPainter::paintFillLayer()`
when the inlineBoxIterator has next or previous boxes. I was confused by the fact that the existing
code was a no-op; it reset the location of `borderRect` but that has no impact on radius
computations. This code was a hold-over from when we passed the inline box width and height in
separately, but now `borderRect` reflects the inline box size already.

So just remove the code that reset the box location.

Two old pixel tests would have caught this; convert them to ref tests.

* LayoutTests/fast/backgrounds/border-radius-split-background-expected.html: Added.
* LayoutTests/fast/backgrounds/border-radius-split-background-image-expected.html: Added.
* LayoutTests/fast/backgrounds/border-radius-split-background-image.html:
* LayoutTests/fast/backgrounds/border-radius-split-background.html:
* LayoutTests/platform/glib/fast/backgrounds/border-radius-split-background-expected.txt: Removed.
* LayoutTests/platform/glib/fast/backgrounds/border-radius-split-background-image-expected.txt: Removed.
* LayoutTests/platform/gtk/fast/backgrounds/border-radius-split-background-expected.png: Removed.
* LayoutTests/platform/gtk/fast/backgrounds/border-radius-split-background-image-expected.png: Removed.
* LayoutTests/platform/ios/fast/backgrounds/border-radius-split-background-expected.txt: Removed.
* LayoutTests/platform/ios/fast/backgrounds/border-radius-split-background-image-expected.txt: Removed.
* LayoutTests/platform/mac/fast/backgrounds/border-radius-split-background-expected.png: Removed.
* LayoutTests/platform/mac/fast/backgrounds/border-radius-split-background-expected.txt: Removed.
* LayoutTests/platform/mac/fast/backgrounds/border-radius-split-background-image-expected.png: Removed.
* LayoutTests/platform/mac/fast/backgrounds/border-radius-split-background-image-expected.txt: Removed.
* LayoutTests/platform/win/fast/backgrounds/border-radius-split-background-expected.txt: Removed.
* LayoutTests/platform/win/fast/backgrounds/border-radius-split-background-image-expected.txt: Removed.
* Source/WebCore/rendering/BackgroundPainter.cpp:
(WebCore::BackgroundPainter::paintFillLayer const):

Canonical link: https://commits.webkit.org/283180@main